--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="frame-five">
                 <div class="box-five">Some text</div>
-                <div class="box-five bxfve-second">Some text</div>
+                <div class="box-five five-second">Some text</div>
                 <div class="box-five">Some text</div>
             </div>
             <div class="frame-six">
@@ -41,6 +41,45 @@
                 <div class="box-six"></div>
             </div>
         </div>  
+        <div class="second-container">
+            <div class="dice-one">
+                <div class="dot-one"></div>
+                <div class="dot-one"></div>
+                <div class="dot-one"></div><br>
+                <div class="dot-one second-row"></div>
+                <div class="dot-one second-row"></div>
+
+            </div>
+            <div class="dice-two">
+                <div class="dot-two top-two"></div>
+                <div class="dot-two top-two"></div>
+                <div class="dot-two bottom-two"></div>
+                <div class="dot-two bottom-two"></div>
+                <div class="dot-two bottom-two"></div>
+            </div>
+            <div class="dice-three">
+                <div class="dot-three"></div>
+                <div class="dot-three"></div>
+                <div class="dot-three"></div>
+                <div class="dot-three bottom-three"></div>
+                <div class="dot-three bottom-three"></div>
+                <div class="dot-three bottom-three"></div>
+            </div>
+            <div class="dice-four">
+                <div class="dot-four"></div>
+                <div class="dot-four"></div>
+                <div class="dot-four"></div>
+                <div class="dot-four bottom-four"></div>
+                <div class="dot-four bottom-four"></div>
+                <div class="dot-four bottom-four"></div>
+            </div>
+            <div class="dice-five">
+                <div class="dot-five"></div>
+                <div class="dot-five"></div>
+                <div class="dot-five"></div>
+                <div class="dot-five bottom-five"></div>
+                <div class="dot-five bottom-five"></div>
+                <div class="dot-five bottom-five"></div>
 
 </body>
 </html>
